--- a/assets/css/templatemo-chain-app-dev.css
+++ b/assets/css/templatemo-chain-app-dev.css
@@ -1354,10 +1354,10 @@ The Clients
 }
 
 .pricing-item-regular {
-  margin-top: 30px;
-  box-shadow: 0px 0px 15px rgba(0,0,0,0.07);
+  margin-top: 0px;
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.07);
   border-radius: 50px;
-  padding: 90px 30px;
+  padding: 40px 20px 20px 40px;
   text-align: center;
   position: relative;
   z-index: 1;
@@ -1368,7 +1368,7 @@ The Clients
   position: absolute;
   top: 0;
   left: 0;
-  background-image: url(../images/hape.png);
+ 
   z-index: 0;
   content: '';
   width: 400px;
@@ -1403,7 +1403,7 @@ The Clients
 }
 
 .pricing-item-regular .icon img {
-  width: 120px;
+  width: auto;
   height: 106px;
   margin-bottom: 30px;
 }
